; ModuleID = '/home/carl/AnghaBench/zstd/tests/fuzz/extr_stream_decompress.c_makeOutBuffer.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/fuzz/extr_stream_decompress.c_makeOutBuffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32, i32 }

@buf = common dso_local global i32 0, align 4
@kBufSize = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*)* @makeOutBuffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @makeOutBuffer(%struct.TYPE_3__* noalias sret %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  store i32* %1, i32** %3, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  %5 = load i32, i32* @buf, align 4
  %6 = sext i32 %5 to i64
  store i64 %6, i64* %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 1
  store i32 0, i32* %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 2
  store i32 0, i32* %8, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 3
  store i32 0, i32* %9, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i64, i64* @kBufSize, align 8
  %12 = call i64 @FUZZ_dataProducer_uint32Range(i32* %10, i32 1, i64 %11)
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  store i64 %12, i64* %13, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %0, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @kBufSize, align 8
  %17 = icmp sle i64 %15, %16
  %18 = zext i1 %17 to i32
  %19 = call i32 @FUZZ_ASSERT(i32 %18)
  ret void
}

declare dso_local i64 @FUZZ_dataProducer_uint32Range(i32*, i32, i64) #1

declare dso_local i32 @FUZZ_ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
